--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 600px) {
 header, footer{
 	background: white;
@@ -27,12 +28,17 @@ p.intro {
   font-family: "Avenir";
   line-height: 20px;
   font-size: 15px;
+	padding-left: 40px;
+	padding-bottom: 10px;
+	text-align: left;
 }
 
 p.hello {
   font-family: "Avenir";
-  font-weight: 900;
+  font-weight: 700;
   font-size: 25px;
+	text-align: center;
+	padding: 10px;
 }
 
 nav ul{
@@ -51,3 +57,65 @@ nav ul li{
 nav a{
 		color:white;
 }
+
+.flex-grid {
+  display: flex;
+}
+.flex-grid .col {
+  flex: 1;
+}
+.flex-grid-thirds {
+  display: flex;
+  justify-content: space-between;
+}
+.flex-grid-thirds .col {
+  width: 32%;
+}
+
+@media (max-width: 400px) {
+  .flex-grid,
+  .flex-grid-thirds {
+    display: block;
+    .col {
+      width: 100%;
+      margin: 0 0 10px 0;
+    }
+  }
+}
+
+
+
+
+* { box-sizing: border-box;
+body {
+  padding: 20px;
+}
+.flex-grid {
+  margin: 0 0 20px 0;
+}
+.col {
+  background: salmon;
+  padding: 20px;
+}
+
+
+html {
+    box-sizing: border-box;
+  }
+  *, *::before, *::after {
+    box-sizing: inherit;
+  }
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.flex__item {
+    background: #ffffff;
+    padding: 1em;
+    border: 1px solid #fff;
+		flex-basis: 100%;
+  }
+
+.
